--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,101 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="20" data-price="9.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32UpuDT"><img src="https://m.media-amazon.com/images/I/51UwT4gZVxL._SR400,400_.jpg" alt="European Adapter" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32UpuDT">European Adapter, European Plug Adapter, International Power Adapter for Europe, Europe Travel Adapter Type C Plug Adapter...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.59</span><span class="ori_price">$11.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 20% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 20% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">20QTW5D9</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $11.99</strong> with promo code: <strong class="m_codes">20QTW5D9</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32UpuDT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="20.71">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QzuSLx"><img src="https://m.media-amazon.com/images/I/71AZUmEp-sL._SR400,400_.jpg" alt="Personal Blender Smoothie Blender" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QzuSLx">Personal Blender Smoothie Blender for Shakes and Smoothies, 24000 RPM High-Speed Mixer/Grinder System with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.71</span><span class="ori_price">$29.59</span>
+        <div class="tooltip_common tooltip_green"><span> + $3 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $3 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30SLKH8X</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $29.59</strong> with promo code: <strong class="m_codes">30SLKH8X</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 21, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2QzuSLx">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="7.68">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30dkbm8"><img src="https://m.media-amazon.com/images/I/61rTcmhIFSL._SR400,400_.jpg" alt="EMOCCI Makeup Brush Holder" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30dkbm8">EMOCCI Makeup Brush Holder Large Pu Leather Make Up Cosmetic Cup Holders Storage Organizer Case Box(Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.68</span><span class="ori_price">$10.97</span></address>
+      <textarea readonly="readonly" class="code_area">30CFUPHT</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $10.97</strong> with promo code: <strong class="m_codes">30CFUPHT</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 21, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30dkbm8">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="16.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OaqD64"><img src="https://m.media-amazon.com/images/I/61pP3LPP9VL._SR400,400_.jpg" alt="Hair Dryer Brush, Multifunctional Hair Dryer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2OaqD64">Hair Dryer Brush, Multifunctional Hair Dryer & Volumizer Salon Hot Hair Brush Roller Comb Negative Ions Hair Dryer...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.50</span><span class="ori_price">$32.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 10% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 10% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50EIDBFK</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $32.99</strong> with promo code: <strong class="m_codes">50EIDBFK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 20, 2019 at 08:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2OaqD64">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="7.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30bKcSB"><img src="https://m.media-amazon.com/images/I/6124ZR0n2-L._SR400,400_.jpg" alt="Herb Scissors" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30bKcSB">Herb Scissors with 5 Blades and Cover,Kitchen 5 Stainless Steel Blade Herb Cutting Shears Scissors, Shredding Scissors ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.79</span><span class="ori_price">$12.99</span></address>
+      <textarea readonly="readonly" class="code_area">40SFHNIU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $12.99</strong> with promo code: <strong class="m_codes">40SFHNIU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 27, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30bKcSB">Use Code at Amazon</a></div>
+</div>
+ 
+
 <div class="card clearfix" data-score="35" data-price="35.74">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/308SA4M"><img src="https://m.media-amazon.com/images/I/61++MeTyKQL._SR400,400_.jpg" alt="LETSCOM USB C Hub, 8-in-1 USB C Adapter" /></a>
