--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,193 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="40" data-price="5.31">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OgdSH9"><img src="https://m.media-amazon.com/images/I/81RzHLzIuFL._SR400,400_.jpg" alt="Brain Jello Gelatin Mold" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2OgdSH9">Brain Jello Gelatin Mold, 2 Pack Large Human Zombie Brain Mold for Cake Candy,Plastic Halloween Baking Brain Prop Decorations...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.31</span><span class="ori_price">$8.85</span></address>
+      <textarea readonly="readonly" class="code_area">40G77QE4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $8.85</strong> with promo code: <strong class="m_codes">40G77QE4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 28, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2OgdSH9">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30dhPnd"><img src="https://m.media-amazon.com/images/I/51YKPduq2lL._SR400,400_.jpg" alt="Y&R Direct Sling Bag Sling Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30dhPnd">Y&R Direct Sling Bag Sling Backpack, Shoulder Chest Crossbody Bag Purse Nylon Lightweight Multicolor Small Daypack Outdoor...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$15.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 6% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 6% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">5061PBM8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $15.99</strong> with promo code: <strong class="m_codes">5061PBM8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30dhPnd">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="14.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ojj4dc"><img src="https://m.media-amazon.com/images/I/81pEG487MiL._SR400,400_.jpg" alt="Allfourior Travel Packing Cubes" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ojj4dc">Allfourior Travel Packing Cubes -4 Set Compression Package Luggage Organizer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.29</span><span class="ori_price">$21.99</span></address>
+      <textarea readonly="readonly" class="code_area">359FJZFR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $21.99</strong> with promo code: <strong class="m_codes">359FJZFR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Ojj4dc">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MhOnTt"><img src="https://m.media-amazon.com/images/I/61nclfji66L._SR400,400_.jpg" alt="Ufanore Full Face Snorkel Mask" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MhOnTt">Ufanore Full Face Snorkel Mask, Snorkeling Mask with Detachable Camera Mount, Foldable 180° Panoramic View, Free Breathing,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.00</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_common tooltip_green"><span> + $2 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $2 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">55EFR9VA</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $39.99</strong> with promo code: <strong class="m_codes">55EFR9VA</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MhOnTt">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="22.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31Ef3Ef"><img src="https://m.media-amazon.com/images/I/61wle-yg2QL._SR400,400_.jpg" alt="Portable Blender USB Rechargeable" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31Ef3Ef">Portable Blender USB Rechargeable, CREATIVE DESIGN Small Blender Cordless Personal Blender for Shakes and Smoothies,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.19</span><span class="ori_price">$36.99</span></address>
+      <textarea readonly="readonly" class="code_area">40F5OYNI</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $36.99</strong> with promo code: <strong class="m_codes">40F5OYNI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 26, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31Ef3Ef">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="21.46">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/34UUdCy"><img src="https://m.media-amazon.com/images/I/818ZnqfwzBL._SR400,400_.jpg" alt="Hair Straightener" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/34UUdCy">Professional Hair Straightener Ceramic Tourmaline Negative Ionic Flat Iron Safe Not Hurt Hair Precise Temperature...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.46</span><span class="ori_price">$42.92</span>
+        <div class="tooltip_common tooltip_red"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">50FLATIRON</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $42.92</strong> with promo code: <strong class="m_codes">50FLATIRON</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 06, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/34UUdCy">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="11.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Od7Oix"><img src="https://m.media-amazon.com/images/I/71CQBPJmkJL._SR400,400_.jpg" alt="sanipoe 360 Rotating Makeup Organizer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Od7Oix">sanipoe 360 Rotating Makeup Organizer, DIY Adjustable Makeup Carousel Spinning Holder Storage Rack, Large Capacity Make up Caddy...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.49</span><span class="ori_price">$22.99</span></address>
+      <textarea readonly="readonly" class="code_area">501M5XS3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $22.99</strong> with promo code: <strong class="m_codes">501M5XS3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 23, 2019 at 11:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Od7Oix">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31zG63v"><img src="https://m.media-amazon.com/images/I/41jCqHCHpnL._SR400,400_.jpg" alt="Milk Frother" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31zG63v">Milk Frother, Aicok Electric Milk Steamer with Hot or Cold Milk Froth with Double Wall, Strix Control, Non-Stick Coating,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.00</span><span class="ori_price">$35.99</span>
+        <div class="tooltip_common tooltip_red"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50OZEC8N</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $35.99</strong> with promo code: <strong class="m_codes">50OZEC8N</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31zG63v">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32TfkTV"><img src="https://m.media-amazon.com/images/I/51ktD9ZSN0L._SR400,400_.jpg" alt="Kids Sonic Electric Toothbrush" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32TfkTV">Kids Sonic Electric Toothbrush, Kits&Portable UV Sanitizer,Waterpoof Slim Portable Travel Toothbrush,Soft Battery...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">5063F566</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">5063F566</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32TfkTV">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="9.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LHXFZQ"><img src="https://m.media-amazon.com/images/I/6139ManGxbL._SR400,400_.jpg" alt="Lunch Bag Insulated Lunch Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LHXFZQ">Lunch Bag Insulated Lunch Bag for Men Women Kids,Resuable Cooler Lunch Box Lunch Water - Resistant Leakproof Tote Bag for Office,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.79</span><span class="ori_price">$13.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30WI37OM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $13.99</strong> with promo code: <strong class="m_codes">30WI37OM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LHXFZQ">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="65" data-price="17.50">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/3072HYq"><img src="https://m.media-amazon.com/images/I/611V8hxSyAL._SR400,400_.jpg" alt="CLY Car Vacuum,DC 12V Car Vacuum Cleaner" /></a>
