--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -548,3 +548,150 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 /* End */
 
 
+
+
+.middle_show {padding:20px;border:3px solid #000;}
+
+.transition, .middle_show p, .middle_show ul li i:before, .middle_show ul li i:after {
+  transition: all 0.25s ease-in-out;
+}
+
+/*.flipIn, .middle_show h1, .middle_show ul li {
+  animation: flipdown 0.5s ease both;
+}*/
+
+.no-select, .middle_show h2 {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+
+.middle_show h1, .middle_show h2 {
+  color: #ff6873;
+}
+
+.middle_show h1 {
+  text-transform: uppercase;
+  font-size: 36px;
+  line-height: 42px;
+  letter-spacing: 3px;
+  font-weight: 100;
+}
+
+.middle_show h2 {
+  font-size: 26px;
+  line-height: 34px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  display: block;
+  background-color: #fefffa;
+  margin: 0;
+  cursor: pointer;
+}
+
+.middle_show p {
+  color: rgba(48, 69, 92, 0.8);
+  font-size: 17px;
+  line-height: 26px;
+  letter-spacing: 1px;
+  position: relative;
+  overflow: hidden;
+  max-height: 800px;
+  opacity: 1;
+  transform: translate(0, 0);
+  margin-top: 14px;
+  z-index: 2;
+}
+
+.middle_show ul {
+  list-style: none;
+  perspective: 900;
+  padding: 0;
+  margin: 0;
+}
+.middle_show ul li {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  padding-top: 10px;
+}
+.middle_show ul li:nth-of-type(1) {
+  animation-delay: 0.5s;
+}
+.middle_show ul li:nth-of-type(2) {
+  animation-delay: 0.75s;
+}
+.middle_show ul li:nth-of-type(3) {
+  animation-delay: 1s;
+}
+.middle_show ul li:last-of-type {
+  padding-bottom: 0;
+}
+.middle_show ul li i {
+  position: absolute;
+  transform: translate(-6px, 0);
+  margin-top: 16px;
+  right: 5px;
+}
+.middle_show ul li i:before, .middle_show ul li i:after {
+  content: "";
+  position: absolute;
+  background-color: #ff6873;
+  width: 3px;
+  height: 9px;
+}
+.middle_show ul li i:before {
+  transform: translate(-2px, 0) rotate(45deg);
+}
+.middle_show ul li i:after {
+  transform: translate(2px, 0) rotate(-45deg);
+}
+.middle_show ul li input[type=checkbox] {
+  position: absolute;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+}
+.middle_show ul li input[type=checkbox]:checked ~ p {
+  margin-top: 0;
+  max-height: 0;
+  opacity: 0;
+  transform: translate(0, 50%);
+}
+.middle_show ul li input[type=checkbox]:checked ~ i:before {
+  transform: translate(2px, 0) rotate(45deg);
+}
+.middle_show ul li input[type=checkbox]:checked ~ i:after {
+  transform: translate(-2px, 0) rotate(-45deg);
+}
+
+@keyframes flipdown {
+  0% {
+    opacity: 0;
+    transform-origin: top center;
+    transform: rotateX(-90deg);
+  }
+  5% {
+    opacity: 1;
+  }
+  80% {
+    transform: rotateX(8deg);
+  }
+  83% {
+    transform: rotateX(6deg);
+  }
+  92% {
+    transform: rotateX(-3deg);
+  }
+  100% {
+    transform-origin: top center;
+    transform: rotateX(0deg);
+  }
+}
