--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,9 +3,13 @@
   <%= render 'shared/header_short' %> 
 </header>
 
-<div class="category_wrap clearfix">
+<div class="category_wrap common_wrap clearfix">
   <div class="wrap">
-    <h2>CATEGORIES</h2>
+    <!-- <h2>CATEGORIES</h2> -->
+    <ul class="clearfix">
+      <li><a href="/categories">CATEGORIES</a></li>
+      <!-- <li><a href="/subcategories"># KEYWORD</a></li> -->
+    </ul>
     
     <!-- <div class="cateogry_box">
       <a href="/blogs/gadget_test">
