--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -32,14 +32,20 @@
           <div class="on_gadgets">
             
               <div class="current_category">
-                <% if params[:category].present? %>
-                  <span>- <%= params[:category] %> -</span>
+                <% if params[:subcategory].present? %>
+                 <span>- # <%= params[:subcategory] %> -</span>
                   <p><%= link_to "All categories", categories_path %></p>
                 <% else %>
-                  <span>- Everything -</span>
-                  <p><%= link_to "All categories", categories_path %></p>
+                  <% if params[:category].present? %>
+                    <span>- <%= params[:category] %> -</span>
+                    <p><%= link_to "All categories", categories_path %></p>
+                  <% else %>
+                    <span>- Everything -</span>
+                    <p><%= link_to "All categories", categories_path %></p>
+                  <% end %>
                 <% end %>
               </div>
+              
               <div class="card_wrap clearfix" >
                 <% @gadgets.each do |gadget| %>
                   <div class="card with-photo">
